# IsaacLab

./: .gitignore  README.md  eval_students.sh  pyproject.toml  read_logs.py  run_exp.sh
source/isaaclab_assets/: pyproject.toml
source/isaaclab_assets/data/Robot/Agility/digit/: backup.usd  digit_v3_250221.usd  digit_v3_aug2.usd  digit_v3_aug26.usd  digit_v3_nov5.usd  digit_v3_oct19.usd  digit_v3_oct23.usd  digit_v3_oct28.usd  digit_v3_sep10.usd
source/isaaclab_assets/isaaclab_assets/robots/: digit.py  unitree.py
source/isaaclab_tasks/: pyproject.toml  setup.py
source/isaaclab_tasks/config/: extension.toml
source/isaaclab_tasks/isaaclab_tasks/manager_based/classic/ant/: __init__.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/classic/cartpole/: __init__.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/classic/humanoid/: __init__.py  humanoid_env_cfg.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/imitation/: __init__.py  imitation_env_cfg.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/imitation/config/: __init__.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/imitation/config/g1/: __init__.py  (+1 more)
source/isaaclab_tasks/isaaclab_tasks/manager_based/imitation/mdp/: __init__.py  events.py  observations.py  rewards.py  terminations.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/imitation_g1/: __init__.py  imitation_g1_env_cfg.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/imitation_g1/mdp/: rewards.py
source/isaaclab_tasks/isaaclab_tasks/utils/: parse_cfg.py
source/isaaclab_tasks/test/: test_environments.py
(+199 files in other folders)
