[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
search-path = [
    "../isaaclab",
    "../isaaclab_assets",
    "../isaaclab_rl",
    "../isaaclab_mimic",
    "../isaaclab_tasks",
]
[tool.pyrefly.errors]
# ignore unexpected-keyword-arg
unexpected-keyword = false
bad-argument-type = false
bad-override = false
